@startuml
!include ../style.puml
package Model {
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

class TaTracker

package Session {
class Session
class UniqueSessionList
}



TaTracker --> "1 " UniqueSessionList

UniqueSessionList --> "*" Session




@enduml

